Fix media queries add JavaScript file Fix CTA media queries for viewability on smaller screensizes Add h2 tag to features Hid detailed information for features so it would appear on click Add JavaScript file for interactivity on features section

--- a/css/style.css
+++ b/css/style.css
@@ -35,6 +35,11 @@ h2 {
 	font-size: 1.3rem;
 }
 
+h3 {
+	font-family: sans-serif;
+	font-weight: bold;
+}	
+
 p {
 	border: 1px solid #000000;
 	padding: 1rem;
@@ -219,8 +224,6 @@ span {
 	}
 }
 
-@media only screen and (max-width: 680px) {
-
 	h2 {
 		font-size: 1rem;
 	}
@@ -273,7 +276,7 @@ span {
 	}
 }
 
-@media only screen and (max-width: 395px) {
+@media only screen and (max-width: 435px) {
 
 	.button,
 	.button2 {
@@ -423,10 +426,10 @@ CTA
 
 	#sign-up-cta {
 		margin-top: 0rem;
-		top: 0;
+		top: 3rem;
 		padding: 1rem 0 .5rem 0;
 		max-width: 100%;
-		margin-bottom: 0;
+		margin-botto3m: 0;
 		margin-left: 0;
 		border-radius: 0;
 	}
@@ -452,7 +455,7 @@ CTA
 
 	#sign-up-cta {
 		margin-top: 0rem;
-		top: 0;
+		top: 3rem;
 		padding: 1rem 0 .5rem 0;
 		max-width: 100%;
 		margin-bottom: 0;
@@ -481,21 +484,22 @@ Features
 }
 
 #features {
-	margin: 1rem auto 0 auto;
+	margin: 1.8rem auto 0 auto;
 }
 
 #features2 {
-	margin: .75rem auto 2.5rem auto;
+	margin: .75rem auto .9rem auto;
 }
-
 
 .image-container {
 	max-height: 13rem;
-	margin: 0 auto;
+	margin: 0 auto .5rem auto;
 	position: center;
 	object-fit: fill;
 	width: 100%;
 	overflow: hidden;
+	box-shadow: 4px 5px 2px gray;
+	border-radius: 8px;
 }
 
 .feature img {
@@ -509,6 +513,20 @@ Features
 .row3,
 .row4 {
 	width: 100%;
+}
+
+.row1 p,
+.row2 p,
+.row3 p,
+.row4 p {
+	display: none;
+}
+
+@media only screen and (max-width: 420px) {
+	#features
+	#features2 {
+		padding-top: 3rem;
+}
 }
 
 /*
@@ -538,7 +556,7 @@ Newsletter
 
 .signupForm {
 	display: flex;
-	justify-content: center;
+	justify-content: right;
 	align-items: center;
 	hight: 100vh;
 }
@@ -549,7 +567,7 @@ Newsletter
 	border-radius: 8px;
 	padding: .5rem 1rem;
 	box-shadow: 0 10px 25px rgba(92, 99, 105, .2);
-	margin: 1rem;
+	margin: 1rem 2rem 1rem 1rem;
 }
 
 .title {
